--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
 
     </header>
     <main>
+        <section>
+            <p>A hair salon for men in Kyiv</p>
+            <h1>Barbershop</h1>
+            <p>We are experts in trendy men’s haircuts. We work quickly, carefully and with style.</p>
+
+            <ul>
+                <li><button type="button">Back</button></li>
+                <li><button type="button">Forward</button></li>
+            </ul>
+
+            <ul>
+                <li><a href="" target="_blank" rel="noopener noreferrer nofollower">Instagram</a></li>
+                <li><a href="" target="_blank" rel="noopener noreferrer nofollower">YouTube</a></li>
+            </ul>
+
+
+
+        </section>
 
     </main>
     <footer></footer>
