--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbershop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -13,238 +12,75 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
-    <link rel="stylesheet" href="./styles/styles.css">
+
+    <title>Barbershop</title>
+    <link rel="icon" href="./images/favbarber.png">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
-    <!--HEADER-->
-
-    <header class="header">
-        <div class="container header-container">
-            <a href="./index.html">
-                <img src="./images/logo.jpg" alt="logo" width="69">
-            </a>
-            <nav>
-                <ul class="list">
-                    <li><a href="" class="link nav-link">Services and prices</a></li>
-                    <li><a href="" class="link nav-link">About</a></li>
-                    <li><a href="" class="link nav-link">Barbers</a></li>
-                    <li><a href="" class="link nav-link">Contacts</a></li>
-                </ul>
-            </nav>
-            <a href="tel:+380441111111">+38 044 111 11 11</a>
-            <button type="button">Online-booking</button>
-        </div>
-    </header>
     <main>
-        <!--HERO-->
+        <section class="hero container">
+            <header class="header">
+                <svg class="header__logo" width="69" height="55.5">
+                    <use href="./images/symbol-defs.svg#logo"></use>
+                </svg>
 
-        <section>
-            <p>A hair salon for men in Kyiv</p>
-            <h1>Barbershop</h1>
-            <p>We are experts in trendy men’s haircuts. We work quickly, carefully and with style.</p>
+                <svg width="40" height="40">
+                    <use href="./images/symbol-defs.svg#menu"></use>
+                </svg>
+            </header>
 
-            <ul class="list">
-                <li><button type="button">Back</button></li>
-                <li><button type="button">Forward</button></li>
-            </ul>
+            <div class="subtitle__box">
+                <div class="subtitle__stick"></div>
+                <p class="subtitle__text">
+                    A hair salon for men in Kyiv
+                </p>
+            </div>
+            <h1 class="hero__title">BarberShop</h1>
+            <p class="hero__text">We are experts in trendy men’s haircuts.
+                We work quickly, carefully and with style.</p>
+        </section>
+        <section class="about section">
+            <div class="container">
+                <div class="subtitle__box">
+                    <div class="subtitle__stick subtitle__stick--black"></div>
+                    <p class="subtitle__text subtitle__text--black">
+                        About
+                    </p>
+                </div>
+                <h2 class="about__title">
+                    Best Barbershop in your city
+                </h2>
+                <p class="about__add-text">
+                    If you want to add more confidence to your image, you should visit us
+                </p>
+                <p class="about__text">
+                    We are a team that never stops at what has been achieved and are thirsty for changes. And when you
+                    fall into the hands
+                    of our master, you will never be the same again. We are a team that is always "on the same wave"
+                    with clients.
+                    Therefore, we are always ready to improve everyone who comes to us!
+                </p>
 
-            <ul class="list">
-                <li><a href="" target="_blank" rel="noopener noreferrer nofollower">Instagram</a></li>
-                <li><a href="" target="_blank" rel="noopener noreferrer nofollower">YouTube</a></li>
-            </ul>
-
-
-
+                <button type="button" class="booking-btn">
+                    <a class="booking-btn__link" href="">online-booking</a>
+                </button>
         </section>
 
-        <!--SOCIAL MEDIA-->
-
-
-
-        <!--BEST BARBERSHOOP-->
-
-        <section class="best-barbershop">
-            <div class="container best-barbershop-container">
-                <ul class="list best-barbershop-list">
-                    <li class="best-barbershop-item"><img src="./images/img1.jpg" alt="beardcut" width="270"></li>
-                    <li class="best-barbershop-item"><img src="./images/img2.jpg" alt="haircut" width="270"></li>
-                </ul>
-                <div class="best-barbershop-box">
-                    <p class="subtitle best-barbershop-text">ABOUT</p>
-
-                    <h2 class="title title-dark title-mb20">Best Barbershop in your city</h2>
-                    <div class="best-barbershop-wrap-p">
-                        <p class="best-barbershop-text">If you want to add more confidence to your image, you should
-                            definitely visit us.</p>
-                        <p class="best-barbershop-text">We are a team that never stops at what has
-                            been achieved and are
-                            thirsty for changes. And when
-                            you
-                            fall
-                            into the hands
-                            of our master, you will never be the same again. We are a team that is always "on the same
-                            wave"
-                            with
-                            clients.
-                            Therefore, we are always ready to improve everyone who comes to us!</p>
-                    </div>
-                    <button type="button" class="orange-button">ONLINE-BOOKING</button>
-
+        <section class="price section">
+            <div class="container">
+                <div class="subtitle__box">
+                    <div class="subtitle__stick"></div>
+                    <p class="subtitle__text">
+                        Spend your time with the best masters
+                    </p>
                 </div>
+                <h2 class="price__title">Services and prices</h2>
             </div>
         </section>
-
-        <!--PRICES-->
-
-        <section>
-            <p>Spend your time with the best masters</p>
-            <h2>Services and prices</h2>
-
-            <table>
-                <tr>
-                    <td>Men’s haircut</td>
-                    <td></td>
-                    <td>from 300 uah.</td>
-                </tr>
-                <tr>
-                    <td>Beard trim</td>
-                    <td></td>
-                    <td>from 300 uah.</td>
-                </tr>
-                <tr>
-                    <td>Mustache trim</td>
-                    <td></td>
-                    <td>from 200 uah.</td>
-                </tr>
-                <tr>
-                    <td>Straight razor shave</td>
-                    <td></td>
-                    <td>from 200 uah.</td>
-                </tr>
-            </table>
-
-            <table>
-                <tr>
-                    <td>Trainee’s haircut</td>
-                    <td></td>
-                    <td>from 50 uah.</td>
-                </tr>
-                <tr>
-                    <td>Haircut under the nozzle</td>
-                    <td></td>
-                    <td>from 200 uah.</td>
-                </tr>
-                <tr>
-                    <td>Children’s haircut (0-12 y.o.)</td>
-                    <td></td>
-                    <td>from 300 uah.</td>
-                </tr>
-                <tr>
-                    <td>Camouflage of gray hair</td>
-                    <td></td>
-                    <td>from 200 uah.</td>
-                </tr>
-            </table>
-
-            <button type="button">ONLINE-BOOKING</button>
-
-        </section>
-
-        <!--Why us?-->
-        <section>
-            <p>Old traditional school</p>
-            <h2>¿Why people come to us?</h2>
-            <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times.</p>
-
-            <ul>
-                <li>
-                    <h3>600 <sup>+</sup></h3>
-                    <p>Satisfied customers per day</p>
-                </li>
-                <li>
-                    <h3>50 <sup>+</sup></h3>
-                    <p>Awards for excellent service</p>
-                </li>
-                <li>
-                    <h3>20 <sup>+</sup></h3>
-                    <p>Kyiv’s best
-                        barbers</p>
-                </li>
-                <li>
-                    <h3>100 <sup>+</sup></h3>
-                    <p>Gifts for regular customers</p>
-                </li>
-            </ul>
-        </section>
-
-        <!--Our Barbers-->
-        <section>
-            <p>For true enjoyers of the atmosphere</p>
-            <h2>Our barbers</h2>
-            <ul>
-                <li>
-                    <img src="./images/barber1.jpg" alt="barber1">
-                    <h3>John Smith</h3>
-                    <p>Extreme Barber</p>
-                </li>
-                <li>
-                    <img src="./images/barber2.jpg" alt="barber2">
-                    <h3>Michele Doe</h3>
-                    <p>Extreme Barber</p>
-                </li>
-                <li>
-                    <img src="./images/barber3.jpg" alt="barber3">
-                    <h3>Alan Black</h3>
-                    <p>Extreme Barber</p>
-                </li>
-            </ul>
-        </section>
-
-        <!--Fotos-->
-        <section>
-            <p>In Latin, "barba" means "beard"</p>
-            <ul>
-                <li>
-                    <img src="./images/foto1.jpg" alt="foto1">
-                </li>
-                <li>
-                    <img src="./images/foto2.jpg" alt="foto2">
-                </li>
-                <li>
-                    <img src="./images/foto3.jpg" alt="foto3">
-                </li>
-                <li>
-                    <img src="./images/foto4.jpg" alt="foto4">
-                </li>
-
-            </ul>
-        </section>
-
-        <!--Log in-->
-        <section></section>
-
-        <!--Contacts-->
-        <section>
-            <h2>Contacts</h2>
-            <address>
-                <a href="https://goo.gl/maps/7Yvafx4ff8JBMXH38">st. Vasilkovaya, 7A Kiev, 08132</a>
-                <a href="tel:+380441111111">+38 044 111 11 11</a>
-                <a href="mailto:barbershop@email.com">barbershop@email.com</a>
-
-            </address>
-            <p>Working hours</p>
-            <p>Every day from 9:00 to 22:00</p>
-
-        </section>
-
-
     </main>
-    <footer>
-        <p>&copy;Copyright 2020</p>
-        <a href="">Instagram</a>
-        <a href="">Youtube</a>
-    </footer>
+
 </body>
 
 </html>
